@@ -970,6 +970,14 @@ management of isabelle build. This is relevant for big sessions that may
 exhaust the small 32-bit address space of the ML process (which is used
 by default).
 
+* System option "ML_process_policy" specifies an optional command prefix
+for the underlying ML process, e.g. to control CPU affinity on
+multiprocessor systems.
+
+* The "isabelle jedit" tool provides options -P and -p to specify an
+optional command prefix for the Java and ML process, respectively (see
+also option "ML_process_policy").
+
 
 
 New in Isabelle2016 (February 2016)
